sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:7: error: value =< is not a member of Int
    if (getCouleur(debut)==BLEU && debut=<len){
                                        ^